--- a/src/components/rightCard/rightCard.css
+++ b/src/components/rightCard/rightCard.css
@@ -3,8 +3,8 @@
   margin-top: 15px;
   margin-right: 30px;
   height: auto;
-  min-height: 380px;
-  /* Reduced height to eliminate empty space */
+  min-height: unset;
+  /* Removed min-height to eliminate bottom gap */
 
   width: 60%;
   padding: 30px;
